[package]
name = "naia-qs-client-example"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "index" # This is because cargo-web also picks up the static assets folder...
path = "src/main.rs"

[features]
web-sys = ["web_sys", "quicksilver/web-sys", "wee_alloc"]

[dependencies]
naia-client = { version = "0.2.0" }
quicksilver = { version = "0.4.0-alpha0.6" }
wee_alloc = { version = "0.4.2", optional = true }
wasm-bindgen = "0.2.45"

[dependencies.web_sys]
version = "0.3.22"
package = "web-sys"
features = ["console"]
optional = true