[package]
name = "naia-qs-client-example"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib","rlib"]

[[bin]]
name = "index" # This is because cargo-web also picks up the static assets folder...
path = "src/main.rs"

[dependencies]
naia-client = { path = "../../naia/client" } # version = "0.2.0" }
naia-qs-example-shared = { path = "../shared" }
quicksilver = { path = "../../quicksilver", features = [ "web-sys" ] } # currently quicksilver doesn't not run correctly using web-sys, hope to not have to run this locally in the future
log = "0.4"
cfg-if = "0.1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }
wasm-bindgen = { version = "0.2.45", features = [ "serde-serialize" ] }
web-sys = { version = "0.3.4", features = [ 'Window' ] }