[package]
name = "naia-qs-server-example"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
use-udp = [ "naia-server/use-udp" ]
use-webrtc = [ "naia-server/use-webrtc" ]

[dependencies]
naia-server = { version = "0.3.0" }
naia-qs-example-shared = { path = "../shared" }
tokio = { version = "0.2", features = ["macros"] }
log = "0.4"
simple_logger = { version = "1.4" }