[package]
name = "naia-qs-example-shared"
version = "0.1.0"
authors = ["connorcarpenter <connorcarpenter@gmail.com>"]
publish = false
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
naia-shared = { path = "../../naia/shared" } #version = "0.2.0" }
naia-derive = { path = "../../naia/derive" } #version = "0.1.1" }
cfg-if = "0.1.10"
log = "0.4"
nanoserde = "0.1.17"